--- a/Locale.de-DE.xaml
+++ b/Locale.de-DE.xaml
@@ -354,13 +354,13 @@
     <system:String x:Key="txtNo">No</system:String>
     <system:String x:Key="txtType">Type</system:String>
     <!-- (file type) -->
-    <system:String x:Key="txtFile">file</system:String>
-    <system:String x:Key="txtShortcut">shortcut</system:String>
+    <system:String x:Key="txtFile">Datei</system:String>
+    <system:String x:Key="txtShortcut">Verknüpfung</system:String>
     <system:String x:Key="txtFolder">folder</system:String>
     <!-- (The folder is empty. (subject)) -->
     <system:String x:Key="txtAccusativeFolder">folder</system:String>
     <!-- (Do you want to delete the folder? (direct object))-->
-    <system:String x:Key="txtRecycleBin">Recycle Bin</system:String>
+    <system:String x:Key="txtRecycleBin">Papierkorb</system:String>
     <system:String x:Key="txtSeveralItems">several items</system:String>
     <system:String x:Key="txtConfirmDeleteObject">Are you sure you want to move this {0} to {1}?</system:String>
     <system:String x:Key="txtConfirmRemoveObject">Are you sure you want to delete this {0} permanently?</system:String>
